--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
         container_name: jenkins
         volumes:
          - /mnt/data/jenkins:/var/jenkins_home
+	 - /var/run/docker.sock:/var/run/docker.sock
+	 - /usr/bin/docker:/usr/bin/docker
         ports:
             - 8080:8080
             - 50000:50000
         restart:
             always
-
