--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
          - /mnt/data/jenkins:/var/jenkins_home
 	 - /var/run/docker.sock:/var/run/docker.sock
 	 - /usr/bin/docker:/usr/bin/docker
+	 - /etc/timezone:/etc/timezone
+	 - /etc/localtime:/etc/localtime
         ports:
             - 8080:8080
             - 50000:50000
